tests/cases/generics/errors/generic-signature-unknown-return.ari
fn make_value[T](value: T) -> U {
  return value;
}

fn main() -> i64 {
  return 0;
}
